@@ -24,12 +24,6 @@ EXTRA_DIST = menu.lst $(man_MANS) $(noinst_SCRIPTS) \
 %.S.texi: %.S $(srcdir)/$(SRC2TEXI)
 	$(SHELL) $(srcdir)/$(SRC2TEXI) $(srcdir) $< $@
 
-# FIXME: Use this rule until Debian has the new Texinfo.
-grub.info: grub.texi
-	@cd $(srcdir) && rm -f $@ $@-[0-9] $@-[0-9][0-9]
-	cd $(srcdir) \
-	  && sed 's/@command/@file/g; s/ifnottex/ifinfo/' grub.texi | $(MAKEINFO)
-
 if MAINTAINER_MODE
 $(srcdir)/grub.8: ../grub/grub $(srcdir)/$(HELP2MAN)
 	$(PERL) $(srcdir)/$(HELP2MAN) --name="the grub shell" \
